--- a/index.html
+++ b/index.html
@@ -139,10 +139,9 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/images/fig1txt.png"
-                type="image/png">
-      </video>
+      <div class="content has-text-centered">
+        <img src="./static/images/fig1txt.png" alt="Gauss-Laguerre quadrature visualization" width="75%">
+      </div>
       <h2 class="subtitle has-text-centered">
         <span class="dnerf">GL-NeRF</span> uses the Gauss-Laguerre quadrature that mathematically guarantees the highest precision to sample points for computing the volume rendering integral.
       </h2>
