--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <!--/ Abstract. -->
 
     <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
+    <!-- <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
@@ -185,7 +185,7 @@
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--/ Paper video. -->
   </div>
 </section>
@@ -203,7 +203,7 @@
       </p>
     </div>
     <div class="content has-text-centered">
-      <img src="./static/images/th.png" alt="Gauss-Laguerre quadrature visualization" width="75%">
+      <img src="./static/images/th.png" alt="Gauss-Laguerre quadrature visualization" width="50%">
     </div>
   </div>
 </div>
@@ -223,7 +223,7 @@
             GL-NeRF sample points at which the integral of volume density reaches the values of the roots of the Laguerre polynomials.
           </p>
           <div class="content has-text-centered">
-            <img src="./static/images/point_sel.png" alt="Gauss-Laguerre quadrature visualization" width="75%">
+            <img src="./static/images/point_sel.png" alt="Gauss-Laguerre quadrature visualization" width="50%">
           </div>
         </div>
       </div>
@@ -240,7 +240,7 @@
               verifying the use of the Gauss-Laguerre quadrature.
             </p>
             <div class="content has-text-centered">
-              <img src="./static/images/fig_motivation.png" alt="Gauss-Laguerre quadrature visualization" width="75%">
+              <img src="./static/images/fig_motivation.png" alt="Gauss-Laguerre quadrature visualization" width="50%">
             </div>
           </div>
 
