--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 </section>
 
 <!-- Theoretical framework. -->
+<div class="container is-max-desktop">
 <div class="columns is-centered">
   <div class="column is-full-width">
     <h2 class="title is-4">Theoretical framework</h2>
@@ -206,6 +207,7 @@
       <img src="./static/images/th.png" alt="Gauss-Laguerre quadrature visualization" width="50%">
     </div>
   </div>
+</div>
 </div>
 <!--/ Theoretical framework. -->
 
