--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             GL-NeRF sample points at which the integral of volume density reaches the values of the roots of the Laguerre polynomials.
           </p>
           <div class="content has-text-centered">
-            <img src="./static/images/point_sel.png" alt="Gauss-Laguerre quadrature visualization" height="100%">
+            <img src="./static/images/point_sel.png" alt="Gauss-Laguerre quadrature visualization" width="50%">
           </div>
         </div>
       </div>
@@ -242,7 +242,7 @@
               verifying the use of the Gauss-Laguerre quadrature.
             </p>
             <div class="content has-text-centered">
-              <img src="./static/images/fig_motivation.png" alt="Gauss-Laguerre quadrature visualization" height="100%">
+              <img src="./static/images/fig_motivation.png" alt="Gauss-Laguerre quadrature visualization" width="50%">
             </div>
           </div>
 
