--- a/index.html
+++ b/index.html
@@ -233,9 +233,8 @@
 
       <!-- Matting. -->
       <div class="column">
+        <div class="content">
         <h2 class="title is-3">Justification of the use of the Gauss-Laguerre quadrature</h2>
-        <div class="columns is-centered">
-          <div class="column content">
             <p>
               In addition to the Stone-Weierstrass theorem, we empirically
               found that the color function can be approximated by polynomials,
@@ -244,10 +243,8 @@
             <div class="content has-text-centered">
               <img src="./static/images/fig_motivation.png" alt="Gauss-Laguerre quadrature visualization" width="50%">
             </div>
-          </div>
-
         </div>
-      </div>
+        </div>
     </div>
     <!--/ Matting. -->
 
