--- a/index.html
+++ b/index.html
@@ -234,11 +234,9 @@
       <!-- Matting. -->
       <div class="column">
         <div class="content">
-        <h2 class="title is-3">Justification of the use of the Gauss-Laguerre quadrature</h2>
+        <h2 class="title is-3">Justification</h2>
             <p>
-              In addition to the Stone-Weierstrass theorem, we empirically
-              found that the color function can be approximated by polynomials,
-              verifying the use of the Gauss-Laguerre quadrature.
+              In addition to the Stone-Weierstrass theorem, we empirically found that the color function can be approximated by polynomials.
             </p>
             <div class="content has-text-centered">
               <img src="./static/images/fig_motivation.png" alt="Gauss-Laguerre quadrature visualization" width="50%">
