--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://silongyong.github.io/"
+                <a href="https://arxiv.org/pdf/2410.19831"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -99,7 +99,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://silongyong.github.io/"
+                <a href="https://arxiv.org/abs/2410.19831"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -108,7 +108,7 @@
                 </a>
               </span>
               <!-- Video Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://silongyong.github.io/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -116,7 +116,7 @@
                   </span>
                   <span>Video</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/SilongYong/GL-NeRF"
